   compression into expansion mode.
 * Add a basic Tape simulation effect for slow-down stops, lo-fi wow and
   flutter, saturation and tone coloring, etc.
 * New presets:
    * FX Master Enhancer, a preset for using JS80P as a master bus effect
      rather than a synthesizer.
    * Creepy Wind for making eerie wind sound Foley effects.
 * Bugfix: fixed the positioning of the distortion type selectors on the user
   interface.

v3.3.0 (2024-12-11)
 * The MIX (modulator additive volume) parameter can now be controlled with
   envelopes and polyphonic LFOs.
 * New presets: Expressive Saw, a preset where your playing style can
   dramatically change the sound, and Flute Mono, a monophonic version of the
   Flute preset.
 * Bugfix: LoongArch VST3 packaging has been fixed in the source distribution
   thanks to @YHStar.

v3.2.1 (2024-11-17)
 * The meaning of the Macro and Envelope scale parameters, and the LFO
   amplitude parameter have been clarified on the user interface and in the
   documentation.

v3.2.0 (2024-11-16)
 * The delay lines of the Echo effect can now be reversed. Various combinations
   of reversed and normal delay lines can result in interesting rhythmic
   effects.
 * The source distribution can now be compiled for LoongArch systems thanks to
   @YHStar.
 * Small performance improvements in the distortion effects.
 * New preset: Dystopiano, showcasing the weird and eerie sound of backwards
   echos.

v3.1.3 (2024-08-19)
 * Bugfix: oscillator filters will now correctly handle polyphony when one or
   more of their parameters are controlled by LFOs with amplitude envelopes
   (https://github.com/attilammagyar/js80p/issues/31).
 * Bugfix: MIDI CC helper parameters are now registered with the correct
   default values in both the FST and the VST3 plugin.
 * VST3: turn off MPE to note expression conversion during plugin
   initialization in hosts which do it by default, in order to be able to
   receive MIDI events unmodified.