@@ -1,0 +1,206 @@
+; The largest musical instrument in the world is the Great Stalacpipe Organ
+; located in Luray Caverns, Virginia, USA. It is a keyboard instrument which
+; makes its tones by using rubber mallets to tap ancient stalactites of varying
+; sizes, distributed over several acres in the cavern. This patch is a
+; recreation of its sound, based on various samples, complete with occasional
+; random water droplets (that can be turned off by turning down the mod wheel
+; to zero).
+[js80p]
+MAMPctl = 0.589843750
+MVS = 0.40
+MFLD = 0.099999999999999
+MPRTctl = 0.64843750
+MPRD = 1.0
+MFINctl = 0.550781250
+MPANctl = 0.6718750
+MSUBctl = 0.593750
+MC1 = 0.910
+MC3 = 0.560
+MC5 = 0.517499999999999
+MC7 = 0.510
+MC9 = 0.50250
+MF2FRQctl = 0.597656250
+CAMPctl = 0.582031250
+CVS = 0.250
+CDTNctl = 0.535156250
+CFINctl = 0.675781250
+CPANctl = 0.58593750
+CVOL = 0.150
+EOG = 0.50
+ECDPT = 0.20
+ECHPF = 0.457724532433411
+ECHPQ = 0.0
+ECWET = 0.30
+ECDRY = 0.70
+EEDEL = 0.333466666666667
+EEFB = 0.815750750750751
+EEDF = 0.759999989770394
+EEWID = 0.850
+EEHPF = 0.467024518665076
+EEHPQ = 0.0
+EECTH = 0.7750
+EECAT = 0.016335445148383
+EECRL = 0.236355451817273
+EECR = 0.00840
+EEWET = 0.150
+EEDRY = 0.850
+ERRSZ = 0.668333333333334
+ERRS = 0.965750750750751
+ERDF = 0.755000103563501
+ERDG = 0.748564879133092
+ERWID = 0.10
+ERHPF = 0.467024490712159
+ERHPQ = 0.0
+ERCTH = 0.8250
+ERCAT = 0.501335445148383
+ERCRL = 1.0
+ERCR = 0.00420
+ERWET = 0.050
+ERDRY = 0.950
+F1INctl = 0.503906250
+F1DSTctl = 0.5156250
+F1RND = 1.0
+F2INctl = 0.50781250
+F2RND = 1.0
+F3INctl = 0.511718750
+F3AMTctl = 0.50781250
+F3RND = 1.0
+F4INctl = 0.5156250
+F4RNDctl = 0.503906250
+F5INctl = 0.519531250
+F5RND = 1.0
+F6INctl = 0.511718750
+F6MIN = 0.10
+F6MAX = 0.90
+F6DST = 0.80
+F7INctl = 0.503906250
+F7MINctl = 0.542968750
+F7MAXctl = 0.53906250
+F7DST = 0.50
+F8INctl = 0.5156250
+F8MIN = 0.350
+F8MAX = 0.420
+F9INctl = 0.519531250
+F9MIN = 0.90
+F10INctl = 0.527343750
+F10MIN = 0.10
+F10RND = 1.0
+F11INctl = 0.527343750
+F11AMTctl = 0.50781250
+F12INctl = 0.613281250
+F12AMTctl = 0.621093750
+F12DST = 1.0
+F13INctl = 0.003906250
+F13DST = 0.50
+F14INctl = 0.50781250
+F14MAX = 0.229999999999999
+F14AMTctl = 0.628906250
+F14DST = 0.700000000000001
+F15MID = 0.970
+F15INctl = 0.503906250
+F15MIN = 1.0
+F15MAX = 0.0
+F16INctl = 0.503906250
+F16MIN = 0.60
+F16MAXctl = 0.7031250
+F16DST = 0.30
+F17INctl = 0.503906250
+F17MIN = 0.360
+F17MAX = 0.050
+F17DST = 0.50
+F18INctl = 0.503906250
+F18MIN = 0.20
+F18MAX = 0.010
+F19INctl = 0.52343750
+F19MIN = 0.30
+F19MAX = 0.70
+F19DST = 0.350
+F20INctl = 0.503906250
+F20MIN = 0.0020
+F20MAX = 0.00050
+F20DST = 0.20
+F21INctl = 0.50781250
+F21MIN = 0.630
+F21MAX = 0.930
+F21DST = 0.20
+F22INctl = 0.50781250
+F22MIN = 0.0050
+F22MAX = 0.00050
+F22DST = 0.800000000000001
+N1AMTctl = 0.61718750
+N1DELctl = 0.5468750
+N1ATK = 0.00050
+N1HLD = 0.00080
+N1DEC = 0.004635995733049
+N1SUS = 0.0
+N2AMTctl = 0.531250
+N2INI = 1.0
+N2HLD = 0.0
+N2SUS = 1.0
+N2FIN = 1.0
+N3ATKctl = 0.707031250
+N3HLD = 0.010
+N3DECctl = 0.636718750
+N3SUS = 0.0
+N3REL = 0.101666666666667
+N4AMTctl = 0.6250
+N4ATK = 0.020
+N4HLD = 0.0050
+N4DECctl = 0.6406250
+N4SUS = 0.0
+N4REL = 0.101666666666667
+N5AMTctl = 0.63281250
+N5INI = 0.80
+N5ATK = 0.00080
+N5HLD = 0.0
+N5DEC = 0.020
+N5SUS = 0.730
+N5FIN = 1.0
+N6INI = 1.0
+N6ATK = 0.00080
+N6HLD = 0.00040
+N6DEC = 0.00070
+N6SUS = 0.050
+N7AMTctl = 0.644531250
+N7INI = 1.0
+N7SUS = 1.0
+N7FIN = 1.0
+N8INI = 0.250
+N8DELctl = 0.5468750
+N8ATK = 0.0050
+N8PK = 0.50
+N8SUS = 0.50
+N8FIN = 0.50
+L1FRQ = 0.780187455094777
+L1MIN = 0.430
+L1MAX = 0.570
+MWAV = 1.0
+L1LOG = 1.0
+L1CEN = 1.0
+EESYN = 1.0
+MF1LOG = 1.0
+MF2LOG = 1.0
+CF1LOG = 1.0
+CF2LOG = 1.0
+EF1LOG = 1.0
+EF2LOG = 1.0
+ECLOG = 1.0
+EELOG = 1.0
+ERLOG = 1.0
+NH = 0.90
+ERTYP = 1.0
+ECTYP = 0.642857142857143
+MOIA = 0.216666666666667
+COIA = 1.0
+L1AEN = 0.416666666666667
+N1ASH = 0.50
+N3ASH = 0.50
+N4ASH = 0.50
+N1DSH = 0.583333333333333
+N3DSH = 0.50
+N4DSH = 0.583333333333333
+N1RSH = 0.583333333333333
+N3RSH = 0.50
+N4RSH = 0.583333333333333
+F13DSH = 0.666666666666667
+ERCM = 1.0
