@@ -35,7 +35,7 @@
 namespace JS80P
 {
 
-size_t const Bank::NUMBER_OF_BUILT_IN_PROGRAMS = 46;
+size_t const Bank::NUMBER_OF_BUILT_IN_PROGRAMS = 47;
 
 Bank::Program const Bank::BUILT_IN_PROGRAMS[] = {
 
@@ -6062,6 +6062,212 @@ Bank::Program const Bank::BUILT_IN_PROGRAMS[] = {
             "N1RSH = 0.50\n"
             "F1DSH = 0.333333333333333\n"
             "F9DSH = 0.333333333333333\n"
+            "ERCM = 1.0\n"
+        )
+    ),
+
+    Program(
+        "Stalacpipe Organ",
+        "Prog047",
+        (
+            "[js80p]\n"
+            "MAMPctl = 0.589843750\n"
+            "MVS = 0.40\n"
+            "MFLD = 0.099999999999999\n"
+            "MPRTctl = 0.64843750\n"
+            "MPRD = 1.0\n"
+            "MFINctl = 0.550781250\n"
+            "MPANctl = 0.6718750\n"
+            "MSUBctl = 0.593750\n"
+            "MC1 = 0.910\n"
+            "MC3 = 0.560\n"
+            "MC5 = 0.517499999999999\n"
+            "MC7 = 0.510\n"
+            "MC9 = 0.50250\n"
+            "MF2FRQctl = 0.597656250\n"
+            "CAMPctl = 0.582031250\n"
+            "CVS = 0.250\n"
+            "CDTNctl = 0.535156250\n"
+            "CFINctl = 0.675781250\n"
+            "CPANctl = 0.58593750\n"
+            "CVOL = 0.150\n"
+            "EOG = 0.50\n"
+            "ECDPT = 0.20\n"
+            "ECHPF = 0.457724532433411\n"
+            "ECHPQ = 0.0\n"
+            "ECWET = 0.30\n"
+            "ECDRY = 0.70\n"
+            "EEDEL = 0.333466666666667\n"
+            "EEFB = 0.815750750750751\n"
+            "EEDF = 0.759999989770394\n"
+            "EEWID = 0.850\n"
+            "EEHPF = 0.467024518665076\n"
+            "EEHPQ = 0.0\n"
+            "EECTH = 0.7750\n"
+            "EECAT = 0.016335445148383\n"
+            "EECRL = 0.236355451817273\n"
+            "EECR = 0.00840\n"
+            "EEWET = 0.150\n"
+            "EEDRY = 0.850\n"
+            "ERRSZ = 0.668333333333334\n"
+            "ERRS = 0.965750750750751\n"
+            "ERDF = 0.755000103563501\n"
+            "ERDG = 0.748564879133092\n"
+            "ERWID = 0.10\n"
+            "ERHPF = 0.467024490712159\n"
+            "ERHPQ = 0.0\n"
+            "ERCTH = 0.8250\n"
+            "ERCAT = 0.501335445148383\n"
+            "ERCRL = 1.0\n"
+            "ERCR = 0.00420\n"
+            "ERWET = 0.050\n"
+            "ERDRY = 0.950\n"
+            "F1INctl = 0.503906250\n"
+            "F1DSTctl = 0.5156250\n"
+            "F1RND = 1.0\n"
+            "F2INctl = 0.50781250\n"
+            "F2RND = 1.0\n"
+            "F3INctl = 0.511718750\n"
+            "F3AMTctl = 0.50781250\n"
+            "F3RND = 1.0\n"
+            "F4INctl = 0.5156250\n"
+            "F4RNDctl = 0.503906250\n"
+            "F5INctl = 0.519531250\n"
+            "F5RND = 1.0\n"
+            "F6INctl = 0.511718750\n"
+            "F6MIN = 0.10\n"
+            "F6MAX = 0.90\n"
+            "F6DST = 0.80\n"
+            "F7INctl = 0.503906250\n"
+            "F7MINctl = 0.542968750\n"
+            "F7MAXctl = 0.53906250\n"
+            "F7DST = 0.50\n"
+            "F8INctl = 0.5156250\n"
+            "F8MIN = 0.350\n"
+            "F8MAX = 0.420\n"
+            "F9INctl = 0.519531250\n"
+            "F9MIN = 0.90\n"
+            "F10INctl = 0.527343750\n"
+            "F10MIN = 0.10\n"
+            "F10RND = 1.0\n"
+            "F11INctl = 0.527343750\n"
+            "F11AMTctl = 0.50781250\n"
+            "F12INctl = 0.613281250\n"
+            "F12AMTctl = 0.621093750\n"
+            "F12DST = 1.0\n"
+            "F13INctl = 0.003906250\n"
+            "F13DST = 0.50\n"
+            "F14INctl = 0.50781250\n"
+            "F14MAX = 0.229999999999999\n"
+            "F14AMTctl = 0.628906250\n"
+            "F14DST = 0.700000000000001\n"
+            "F15MID = 0.970\n"
+            "F15INctl = 0.503906250\n"
+            "F15MIN = 1.0\n"
+            "F15MAX = 0.0\n"
+            "F16INctl = 0.503906250\n"
+            "F16MIN = 0.60\n"
+            "F16MAXctl = 0.7031250\n"
+            "F16DST = 0.30\n"
+            "F17INctl = 0.503906250\n"
+            "F17MIN = 0.360\n"
+            "F17MAX = 0.050\n"
+            "F17DST = 0.50\n"
+            "F18INctl = 0.503906250\n"
+            "F18MIN = 0.20\n"
+            "F18MAX = 0.010\n"
+            "F19INctl = 0.52343750\n"
+            "F19MIN = 0.30\n"
+            "F19MAX = 0.70\n"
+            "F19DST = 0.350\n"
+            "F20INctl = 0.503906250\n"
+            "F20MIN = 0.0020\n"
+            "F20MAX = 0.00050\n"
+            "F20DST = 0.20\n"
+            "F21INctl = 0.50781250\n"
+            "F21MIN = 0.630\n"
+            "F21MAX = 0.930\n"
+            "F21DST = 0.20\n"
+            "F22INctl = 0.50781250\n"
+            "F22MIN = 0.0050\n"
+            "F22MAX = 0.00050\n"
+            "F22DST = 0.800000000000001\n"
+            "N1AMTctl = 0.61718750\n"
+            "N1DELctl = 0.5468750\n"
+            "N1ATK = 0.00050\n"
+            "N1HLD = 0.00080\n"
+            "N1DEC = 0.004635995733049\n"
+            "N1SUS = 0.0\n"
+            "N2AMTctl = 0.531250\n"
+            "N2INI = 1.0\n"
+            "N2HLD = 0.0\n"
+            "N2SUS = 1.0\n"
+            "N2FIN = 1.0\n"
+            "N3ATKctl = 0.707031250\n"
+            "N3HLD = 0.010\n"
+            "N3DECctl = 0.636718750\n"
+            "N3SUS = 0.0\n"
+            "N3REL = 0.101666666666667\n"
+            "N4AMTctl = 0.6250\n"
+            "N4ATK = 0.020\n"
+            "N4HLD = 0.0050\n"
+            "N4DECctl = 0.6406250\n"
+            "N4SUS = 0.0\n"
+            "N4REL = 0.101666666666667\n"
+            "N5AMTctl = 0.63281250\n"
+            "N5INI = 0.80\n"
+            "N5ATK = 0.00080\n"
+            "N5HLD = 0.0\n"
+            "N5DEC = 0.020\n"
+            "N5SUS = 0.730\n"
+            "N5FIN = 1.0\n"
+            "N6INI = 1.0\n"
+            "N6ATK = 0.00080\n"
+            "N6HLD = 0.00040\n"
+            "N6DEC = 0.00070\n"
+            "N6SUS = 0.050\n"
+            "N7AMTctl = 0.644531250\n"
+            "N7INI = 1.0\n"
+            "N7SUS = 1.0\n"
+            "N7FIN = 1.0\n"
+            "N8INI = 0.250\n"
+            "N8DELctl = 0.5468750\n"
+            "N8ATK = 0.0050\n"
+            "N8PK = 0.50\n"
+            "N8SUS = 0.50\n"
+            "N8FIN = 0.50\n"
+            "L1FRQ = 0.780187455094777\n"
+            "L1MIN = 0.430\n"
+            "L1MAX = 0.570\n"
+            "MWAV = 1.0\n"
+            "L1LOG = 1.0\n"
+            "L1CEN = 1.0\n"
+            "EESYN = 1.0\n"
+            "MF1LOG = 1.0\n"
+            "MF2LOG = 1.0\n"
+            "CF1LOG = 1.0\n"
+            "CF2LOG = 1.0\n"
+            "EF1LOG = 1.0\n"
+            "EF2LOG = 1.0\n"
+            "ECLOG = 1.0\n"
+            "EELOG = 1.0\n"
+            "ERLOG = 1.0\n"
+            "NH = 0.90\n"
+            "ERTYP = 1.0\n"
+            "ECTYP = 0.642857142857143\n"
+            "MOIA = 0.216666666666667\n"
+            "COIA = 1.0\n"
+            "L1AEN = 0.416666666666667\n"
+            "N1ASH = 0.50\n"
+            "N3ASH = 0.50\n"
+            "N4ASH = 0.50\n"
+            "N1DSH = 0.583333333333333\n"
+            "N3DSH = 0.50\n"
+            "N4DSH = 0.583333333333333\n"
+            "N1RSH = 0.583333333333333\n"
+            "N3RSH = 0.50\n"
+            "N4RSH = 0.583333333333333\n"
+            "F13DSH = 0.666666666666667\n"
             "ERCM = 1.0\n"
         )
     ),
